--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ exclude     = [".gitignore", ".travis.yml", "tests/**/*"]
 
 [dependencies]
 bitflags = "0.1"
+
+[dev-dependencies]
+rand = "0.1.2"
