--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,8 @@ exclude     = [
 ]
 
 [dependencies]
-bitflags = "0.1"
+libc     = "0.1.3"
+bitflags = "0.1.1"
 
 [dev-dependencies]
 rand = "0.3.0"
