Get compiling on Rust 1.0 beta
Initially support this by assuming the lowest common denominator. The long
term solution is to improve the build system to allow pulling in more specific
features that are available on the target system.

--- a/nix-test/Cargo.toml
+++ b/nix-test/Cargo.toml
@@ -7,3 +7,6 @@ authors     = ["Carl Lerche <me@carllerche.com>"]
 homepage    = "https://github.com/carllerche/nix-rust"
 build       = "build.rs"
 license     = "MIT"
+
+[dependencies]
+libc = "*"
