--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,6 @@ exclude     = [
 ]
 
 [features]
-
 eventfd = []
 execvpe = []
 
@@ -30,6 +29,11 @@ path    = "nix-test"
 version = "*"
 
 [[test]]
-
 name = "test"
 path = "test/test.rs"
+
+[[test]]
+name = "test-signalfd"
+path = "test/test_signalfd.rs"
+harness = false
+test = true
