--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ os:
   - osx
 
 env:
-  - ARCH=x86_64
-  - ARCH=i686
+  - RUST_TEST_THREADS=1 ARCH=x86_64
+  - RUST_TEST_THREADS=1 ARCH=i686
 
 script:
   - curl -sSL https://raw.githubusercontent.com/carllerche/travis-rust-matrix/master/test | RUST_TEST_THREADS=1 bash
