testing: move to new posborne/rust-cross images
The rust-cross image is no longer all-in-one but broken out by architecture
class (or platform in the case of android).

Signed-off-by: Paul Osborne <osbpau@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ preadv_pwritev = []
 signalfd = []
 
 [dependencies]
-libc     = "0.2.8"
+libc     = { git = "https://github.com/rust-lang/libc.git" }
 bitflags = "0.4"
 cfg-if = "0.1.0"
 
