--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: rust
-sudo: required
+sudo: false
 dist: trusty
 services:
   - docker
@@ -27,24 +27,31 @@ matrix:
     - os: linux
       env: ARCH=i686
       rust: stable
+      sudo: true
     - os: osx
       env: ARCH=i686
       rust: stable
+      sudo: true
     - os: linux
       env: TARGET=aarch64-unknown-linux-gnu DOCKER_IMAGE=posborne/rust-cross:arm
       rust: 1.7.0
+      sudo: true
     - os: linux
       env: TARGET=arm-unknown-linux-gnueabihf DOCKER_IMAGE=posborne/rust-cross:arm
       rust: 1.7.0
+      sudo: true
     - os: linux
       env: TARGET=mips-unknown-linux-gnu DOCKER_IMAGE=posborne/rust-cross:mips
       rust: 1.7.0
+      sudo: true
     - os: linux
       env: TARGET=mipsel-unknwon-linux-gnu DOCKER_IMAGE=posborne/rust-cross:mips
       rust: 1.7.0
+      sudo: true
     - os: linux
       env: TARGET=arm-linux-androideabi DOCKER_IMAGE=posborne/rust-cross:android
       rust: 1.7.0
+      sudo: true
   allow_failures:
     - rust: nightly
     - env: TARGET=aarch64-unknown-linux-gnu DOCKER_IMAGE=posborne/rust-cross:arm
