--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,11 @@ services:
 
 rust:
   - 1.1.0  # Oldest supported version
+  - 1.2.0
+  - 1.3.0
+  - 1.4.0
+  - 1.5.0
+  - 1.6.0
   - stable
   - beta
   - nightly
@@ -15,23 +20,34 @@ script:
 
 env:
   - ARCH=x86_64
+  - ARCH=i686
 
 os:
   - linux
-  - osx
+
+addons:
+  apt:
+    packages:
+      - gcc-multilib
 
 # Failures on nightly shouldn't fail the overall build.
 matrix:
   fast_finish: true
   include:
-    - os: linux
-      env: ARCH=i686
+    # 32-bit and 64-bit OSX builds on oldest/stable
+    - os: osx
+      env: ARCH=x86_64
       rust: stable
-      sudo: true
     - os: osx
       env: ARCH=i686
       rust: stable
-      sudo: true
+    - os: osx
+      env: ARCH=x86_64
+      rust: 1.1.0
+    - os: osx
+      env: ARCH=i686
+      rust: 1.1.0
+    # Docker builds for other targets
     - os: linux
       env: TARGET=aarch64-unknown-linux-gnu DOCKER_IMAGE=posborne/rust-cross:arm
       rust: 1.7.0
