--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ exclude     = [
   "test/**/*"
 ]
 
+build = "build.rs"
+
 [features]
 eventfd = []
 execvpe = []
@@ -23,6 +25,10 @@ signalfd = []
 libc     = "0.2.8"
 bitflags = "0.4"
 cfg-if = "0.1.0"
+
+[build-dependencies]
+rustc_version = "0.1.7"
+semver = "0.1.20"  # Old version for compatibility with rustc_version.
 
 [dev-dependencies]
 rand = "0.3.8"
