--- a/.travis.yml
+++ b/.travis.yml
@@ -2,94 +2,77 @@ language: rust
 sudo: false
 dist: trusty
 services:
-  - docker
-
-rust:
-  - 1.1.0  # Oldest supported version
-  - 1.2.0
-  - 1.3.0
-  - 1.4.0
-  - 1.5.0
-  - 1.6.0
-  - stable
-  - beta
-  - nightly
-
-script:
-  - bash ci/run-travis.sh
-
-env:
-  - ARCH=x86_64
-  - ARCH=i686
-
-os:
-  - linux
-
+- docker
 addons:
   apt:
     packages:
-      - gcc-multilib
-
-# Failures on nightly shouldn't fail the overall build.
+    - gcc-multilib
+    - libcurl4-openssl-dev
+    - libelf-dev
+    - libdw-dev
+    - binutils-dev
+rust:
+- 1.1.0
+- 1.7.0
+- 1.8.0
+- stable
+- beta
+- nightly
+env:
+  global:
+  - PATH=$HOME/.local/bin:$PATH
+  - TRAVIS_CARGO_NIGHTLY_FEATURE=""
+  - secure: U553Lx5dnlAS4wszv3urlHpgpjo8IzquGZdLK8zO9DZTsvZaqIxPmEAcJE4gPKjmSdhfpmqcNpCnKOghM45/annRnGwKH4cZ5Uy8wPRJDjuWXQ/nFi8/15RueeYD1jBEyNn5X+n4LRTiSVqgYodEPISkMJ3t8IicNzIlYVhS1Ac=
+  matrix:
+  - ARCH=x86_64
+  - ARCH=i686
+os:
+- linux
 matrix:
   fast_finish: true
   include:
-    # 32-bit and 64-bit OSX builds on oldest/stable
-    - os: osx
-      env: ARCH=x86_64
-      rust: stable
-    - os: osx
-      env: ARCH=i686
-      rust: stable
-    - os: osx
-      env: ARCH=x86_64
-      rust: 1.1.0
-    - os: osx
-      env: ARCH=i686
-      rust: 1.1.0
-    # Docker builds for other targets
-    - os: linux
-      env: TARGET=aarch64-unknown-linux-gnu DOCKER_IMAGE=posborne/rust-cross:arm
-      rust: 1.7.0
-      sudo: true
-    - os: linux
-      env: TARGET=arm-unknown-linux-gnueabihf DOCKER_IMAGE=posborne/rust-cross:arm
-      rust: 1.7.0
-      sudo: true
-    - os: linux
-      env: TARGET=mips-unknown-linux-gnu DOCKER_IMAGE=posborne/rust-cross:mips
-      rust: 1.7.0
-      sudo: true
-    - os: linux
-      env: TARGET=mipsel-unknown-linux-gnu DOCKER_IMAGE=posborne/rust-cross:mips
-      rust: 1.7.0
-      sudo: true
-    - os: linux
-      env: TARGET=arm-linux-androideabi DOCKER_IMAGE=posborne/rust-cross:android
-      rust: 1.7.0
-      sudo: true
+  - os: osx
+    env: ARCH=x86_64
+    rust: stable
+  - os: osx
+    env: ARCH=i686
+    rust: stable
+  - os: osx
+    env: ARCH=x86_64
+    rust: 1.1.0
+  - os: osx
+    env: ARCH=i686
+    rust: 1.1.0
+  - os: linux
+    env: TARGET=aarch64-unknown-linux-gnu DOCKER_IMAGE=posborne/rust-cross:arm
+    rust: 1.7.0
+    sudo: true
+  - os: linux
+    env: TARGET=arm-unknown-linux-gnueabihf DOCKER_IMAGE=posborne/rust-cross:arm
+    rust: 1.7.0
+    sudo: true
+  - os: linux
+    env: TARGET=mips-unknown-linux-gnu DOCKER_IMAGE=posborne/rust-cross:mips
+    rust: 1.7.0
+    sudo: true
+  - os: linux
+    env: TARGET=mipsel-unknown-linux-gnu DOCKER_IMAGE=posborne/rust-cross:mips
+    rust: 1.7.0
+    sudo: true
+  - os: linux
+    env: TARGET=arm-linux-androideabi DOCKER_IMAGE=posborne/rust-cross:android
+    rust: 1.7.0
+    sudo: true
   allow_failures:
-    - rust: nightly
-    - env: TARGET=mips-unknown-linux-gnu DOCKER_IMAGE=posborne/rust-cross:mips
-    - env: TARGET=mipsel-unknown-linux-gnu DOCKER_IMAGE=posborne/rust-cross:mips
-    - env: TARGET=arm-linux-androideabi DOCKER_IMAGE=posborne/rust-cross:android
-
-# Deploy documentation to S3 for specific branches. At some
-# point, it would be nice to also support building docs for
-# a specific tag
-deploy:
-  provider: s3
-  access_key_id: AKIAIGFX36YKEFRZJAXA
-  secret_access_key:
-    secure: Q10KEdtBoYxaGXtt23L00J0obv9fpVWtao8YKFEroZMOmvu8Sq2+9aTNGEQRp2OojOxuu+DjZInJlUDFhq6trmV3kpZH2BF7cNRxiZQpQ2FEmlr6ZpYN38GhcIUKdxXqVwXiASJi6j+vz6QdpaOGCs5lQC3VhM5sn49MFXNUrFU=
-  bucket: rustdoc
-  endpoint: "rustdoc.s3-website-us-east-1.amazonaws.com"
-  skip_cleanup: true
-  local-dir: target/doc
-  upload-dir: nix/${TRAVIS_BRANCH}/${TRAVIS_OS_NAME}
-  acl: public_read
-  on:
-    condition: "\"$TRAVIS_RUST_VERSION/$ARCH\" == \"1.1.0/x86_64\""
-    repo: nix-rust/nix
-    branch:
-      - master
+  - rust: nightly
+  - env: TARGET=mips-unknown-linux-gnu DOCKER_IMAGE=posborne/rust-cross:mips
+  - env: TARGET=mipsel-unknown-linux-gnu DOCKER_IMAGE=posborne/rust-cross:mips
+  - env: TARGET=arm-linux-androideabi DOCKER_IMAGE=posborne/rust-cross:android
+before_script:
+- pip install 'travis-cargo<0.2' --user && export PATH=$HOME/.local/bin:$PATH
+script:
+- bash ci/run-travis.sh
+- travis-cargo --only stable doc
+after_success:
+- travis-cargo --only stable doc-upload
+- travis-cargo coveralls --no-sudo --verify
