--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 
 name        = "nix"
 description = "Rust friendly bindings to *nix APIs"
-version     = "0.7.0"
+version     = "0.7.1-pre"
 authors     = ["Carl Lerche <me@carllerche.com>"]
 homepage    = "https://github.com/nix-rust/nix"
 repository  = "https://github.com/nix-rust/nix"
@@ -23,7 +23,7 @@ preadv_pwritev = []
 signalfd = []
 
 [dependencies]
-libc = "0.2.16"
+libc = { git = "https://github.com/rust-lang/libc" }
 bitflags = "0.4"
 cfg-if = "0.1.0"
 void = "1.0.2"
