--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,8 @@
 
 name        = "nix"
 description = "Rust friendly bindings to *nix APIs"
-version     = "0.7.1-pre"
-authors     = ["Carl Lerche <me@carllerche.com>"]
+version     = "0.8.0-pre"
+authors     = ["The nix-rust Project Developers"]
 homepage    = "https://github.com/nix-rust/nix"
 repository  = "https://github.com/nix-rust/nix"
 license     = "MIT"
