--- a/.travis.yml
+++ b/.travis.yml
@@ -42,15 +42,15 @@ matrix:
     - env: TARGET=aarch64-unknown-linux-gnu
     - env: TARGET=armv7-unknown-linux-gnueabihf
     - env: TARGET=mips-unknown-linux-gnu
-    - env: TARGET=mips64-unknown-linux-gnuabi64
-    - env: TARGET=mips64el-unknown-linux-gnuabi64
+    # - env: TARGET=mips64-unknown-linux-gnuabi64
+    # - env: TARGET=mips64el-unknown-linux-gnuabi64
     - env: TARGET=mipsel-unknown-linux-gnu
     - env: TARGET=powerpc-unknown-linux-gnu
     # - env: TARGET=powerpc64-unknown-linux-gnu
     # - env: TARGET=powerpc64le-unknown-linux-gnu
     # - env: TARGET=s390x-unknown-linux-gnu
     - env: TARGET=arm-unknown-linux-gnueabi
-    - env: TARGET=arm-unknown-linux-musleabi
+    # - env: TARGET=arm-unknown-linux-musleabi
 
     # Testing other channels
     - env: TARGET=x86_64-unknown-linux-gnu
