ci: remove thread parallelism
Fixes https://github.com/nix-rust/nix/issues/529, also refer to
https://github.com/nix-rust/nix/issues/529 which first added this
for the old CI infrastructure.

Signed-off-by: Paul Osborne <osbpau@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ rust: stable
 env:
   global:
     - CRATE_NAME=nix
+    - CARGO_TEST_THREADS=1
 
     # default job
     - TARGET=x86_64-unknown-linux-gnu
