--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ sudo: required
 
 # This is the Rust channel that build jobs will use by default but can be
 # overridden on a case by case basis down below
-rust: stable
+rust: 1.13.0
 
 env:
   global:
@@ -53,7 +53,25 @@ matrix:
     - env: TARGET=arm-unknown-linux-gnueabi
     # - env: TARGET=arm-unknown-linux-musleabi
 
-    # Testing other channels
+    # Testing beta on main targets
+    - env: TARGET=x86_64-unknown-linux-gnu
+      rust: beta
+    - env: TARGET=x86_64-apple-darwin
+      os: osx
+      rust: beta
+
+    # Testing nightly on main targets (allowed to fail)
+    - env: TARGET=x86_64-unknown-linux-gnu
+      rust: nightly
+    - env: TARGET=x86_64-apple-darwin
+      os: osx
+      rust: nightly
+
+  # Testing nightlies on main targets. These might fail because of issues
+  # with the compiler, so we allow failures here.
+  allow_failures:
+    # Failures for nightlies may be because of compiler bugs, so don't fail the
+    # build if these fail.
     - env: TARGET=x86_64-unknown-linux-gnu
       rust: nightly
     - env: TARGET=x86_64-apple-darwin
