--- a/bors.toml
+++ b/bors.toml
@@ -1,5 +1,6 @@
-# Gate on Travis CI
-status = ["continuous-integration/travis-ci/push"]
+# Gate on Travis CI and Buildbot
+status = ["continuous-integration/travis-ci/push",
+          "buildbot/nix-rust/nix fbsd11"]
 
 # Set bors's timeout to 4 hours
 #
