--- a/.travis.yml
+++ b/.travis.yml
@@ -35,8 +35,10 @@ matrix:
       rust: 1.13.0
     - env: TARGET=powerpc-unknown-linux-gnu
       rust: 1.13.0
-    # - env: TARGET=powerpc64-unknown-linux-gnu
-    # - env: TARGET=powerpc64le-unknown-linux-gnu
+    - env: TARGET=powerpc64-unknown-linux-gnu
+      rust: 1.13.0
+    - env: TARGET=powerpc64le-unknown-linux-gnu
+      rust: 1.13.0
     # - env: TARGET=s390x-unknown-linux-gnu
     - env: TARGET=x86_64-unknown-linux-gnu
       rust: 1.13.0
