--- a/.travis.yml
+++ b/.travis.yml
@@ -64,7 +64,7 @@ matrix:
       rust: 1.13.0
     - env: TARGET=mipsel-unknown-linux-gnu
       rust: 1.13.0
-    - env: TARGET=powerpc-unknown-linux-gnu
+    - env: TARGET=powerpc-unknown-linux-gnu DISABLE_TESTS=1
       rust: 1.13.0
     - env: TARGET=powerpc64-unknown-linux-gnu
       rust: 1.13.0
