--- a/.travis.yml
+++ b/.travis.yml
@@ -97,6 +97,11 @@ matrix:
       rust: beta
 
   allow_failures:
+    # We allow beta to fail here because a bug might crop up in rust that causes it. We will
+    # however be on the lookout for this and file those bugs with upstream.
+    - env: TARGET=x86_64-unknown-linux-gnu
+      rust: beta
+
     # Planning to add these targets, but they can fail for now
     - env: TARGET=mips64-unknown-linux-gnuabi64
       rust: 1.13.0
