--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 
 name        = "nix"
 description = "Rust friendly bindings to *nix APIs"
-version     = "0.9.0"
+version     = "0.10.0-pre"
 authors     = ["The nix-rust Project Developers"]
 repository  = "https://github.com/nix-rust/nix"
 license     = "MIT"
@@ -15,7 +15,7 @@ exclude     = [
 ]
 
 [dependencies]
-libc = "0.2.25"
+libc = { git = "https://github.com/rust-lang/libc" }
 bitflags = "0.9"
 cfg-if = "0.1.0"
 void = "1.0.2"
