AioCb::Drop will now panic for in-progress AioCb
Printing a warning message to stderr isn't really appropriate, because
there's no way to guarantee that stderr is even valid.  Nor is
aio_suspend necessarily an appropriate action to take.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,10 @@ name = "test"
 path = "test/test.rs"
 
 [[test]]
+name = "test-aio-drop"
+path = "test/sys/test_aio_drop.rs"
+
+[[test]]
 name = "test-mount"
 path = "test/test_mount.rs"
 harness = false
