--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,11 @@ bitflags = "1.0"
 cfg-if = "0.1.0"
 void = "1.0.2"
 
+[dependencies.bytes]
+version = "0.4.5"
+# Don't include the optional serde feature
+default-features = false
+
 [target.'cfg(target_os = "dragonfly")'.build-dependencies]
 gcc = "0.3"
 
