Support building and testing multiple targets at once
Specifying multiple targets can be done by setting the
environment variable to a semi-colon delimited list of
targets.

--- a/.travis.yml
+++ b/.travis.yml
@@ -100,7 +100,7 @@ matrix:
 before_install: set -e
 
 install:
-  - sh ci/install.sh
+  - bash ci/install.sh
   - source ~/.cargo/env || true
 
 script:
