--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ exclude     = [
 ]
 
 [dependencies]
-libc = { git = "https://github.com/rust-lang/libc" }
+libc = "0.2.36"
 bitflags = "1.0"
 cfg-if = "0.1.0"
 void = "1.0.2"
