--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,19 +17,20 @@ bitflags = "1.0"
 cfg-if = "0.1.0"
 void = "1.0.2"
 
-[dependencies.bytes]
-version = "0.4.5"
-# Don't include the optional serde feature
-default-features = false
-
 [target.'cfg(target_os = "dragonfly")'.build-dependencies]
 gcc = "0.3"
 
 [dev-dependencies]
+bytes = { version="0.5.0", default_features = false }
 lazy_static = "1"
 rand = "0.4"
 tempdir = "0.3"
 tempfile = "2"
+
+[patch.crates-io]
+# The examples use on a new feature of Bytes which should be available in 0.5.0
+# https://github.com/carllerche/bytes/pull/185
+bytes = { git = "https://github.com/asomers/bytes", rev = "b57934d" }
 
 [[test]]
 name = "test"
