--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,8 @@ matrix:
     # Linux
     - env: TARGET=aarch64-unknown-linux-gnu
       rust: 1.24.1
+    - env: TARGET=aarch64-unknown-linux-musl
+      rust: 1.24.1
     - env: TARGET=arm-unknown-linux-gnueabi
       rust: 1.24.1
     - env: TARGET=arm-unknown-linux-musleabi DISABLE_TESTS=1
@@ -75,7 +77,11 @@ matrix:
       rust: 1.24.1
     - env: TARGET=s390x-unknown-linux-gnu DISABLE_TESTS=1
       rust: 1.24.1
+    - env: TARGET=sparc64-unknown-linux-gnu
+      rust: 1.24.1
     - env: TARGET=x86_64-unknown-linux-gnu
+      rust: 1.24.1
+    - env: TARGET=x86_64-unknown-linux-gnux32
       rust: 1.24.1
     - env: TARGET=x86_64-unknown-linux-musl
       rust: 1.24.1
@@ -92,6 +98,14 @@ matrix:
     # Make sure stable is always working too
     - env: TARGET=x86_64-unknown-linux-gnu
       rust: stable
+
+  allow_failures:
+    - env: TARGET=aarch64-unknown-linux-musl
+      rust: 1.24.1
+    - env: TARGET=sparc64-unknown-linux-gnu
+      rust: 1.24.1
+    - env: TARGET=x86_64-unknown-linux-gnux32
+      rust: 1.24.1
 
 before_install: set -e
 
