--- a/bors.toml
+++ b/bors.toml
@@ -1,7 +1,6 @@
 # Gate on Travis CI and Buildbot
 status = ["continuous-integration/travis-ci/push",
-          "buildbot/nix-rust/nix amd64_fbsd11",
-          "buildbot/nix-rust/nix i386_fbsd11"]
+	  "FreeBSD 11.2"]
 
 # Set bors's timeout to 4 hours
 #
