Test the theory that test_poll fails due to a thread conflict

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -38,5 +38,5 @@ task:
     - cargo build
     - cargo build --release
   test_script:
-    - cargo test
-    - cargo test --release
+    - cargo test -- --test-threads=1
+    - cargo test --release -- --test-threads=1
