Check how many CPUs the Cirrus Linux images have

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -34,6 +34,7 @@ task:
   setup_script:
     - uname -a
     - cat /etc/debian_version
+    - cat /proc/cpuinfo
   build_script:
     - cargo build
     - cargo build --release
