Fix some bugs with multithreaded tests:
* kmod tests must run exclusively, because they load and unload a module
  with a constant name.
* A few tests were doing some variant of chdir, but weren't taking the
  CWD_MTX.
* The kmod tests read files by path relative to CWD, so they need the
  CWD_MTX.  But they don't need it exclusively, so convert the CWD_MTX
  into an RwLock.
* Tests that do change the cwd need to change it back when they're done.

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -39,5 +39,5 @@ task:
     - cargo build
     - cargo build --release
   test_script:
-    - cargo test -- --test-threads=1
-    - cargo test --release -- --test-threads=1
+    - cargo test
+    - cargo test --release
