--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ exclude     = [
 ]
 
 [dependencies]
-libc = "0.2.57"
+libc = { git = "https://github.com/rust-lang/libc" }
 bitflags = "1.0"
 cfg-if = "0.1.0"
 void = "1.0.2"
