Fix test_ptymaster_drop after PR #1098
This test cannot be compiled under Redox.  PR #1098 attempted to disable
it for Redox, but actually disabled it everywhere.  AFAICT, Cargo has no
syntax to conditionally enable a target, except based on features.
Instead, use conditional compilation within the test.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,6 @@ name = "test-mount"
 path = "test/test_mount.rs"
 harness = false
 
-[[target.'cfg(not(target_os = "redox"))'.test]]
+[[test]]
 name = "test-ptymaster-drop"
 path = "test/test_ptymaster_drop.rs"
