--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,8 @@ targets = [
   "x86_64-unknown-netbsd",
   "x86_64-unknown-dragonfly",
   "x86_64-fuchsia",
-  "x86_64-unknown-redox"
+  "x86_64-unknown-redox",
+  "x86_64-unknown-illumos"
 ]
 
 [dependencies]
